--- a/back/package.json
+++ b/back/package.json
@@ -11,15 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jest": "^29.7.0",
     "mongoose": "^8.5.1",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "validator": "^13.12.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/supertest": "^6.0.2",
+    "@types/validator": "^13.12.0",
+    "@types/zxcvbn": "^4.4.4",
     "nodemon": "^3.1.4",
     "ts-jest": "^29.2.2",
     "typescript": "^5.5.3"
