API -- AuthService imcomplet

--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -9,6 +9,6 @@
     "outDir": "./dist",
     "rootDir": "./src"
   },
-  "include": ["src", "tests"],
+  "include": ["src", "src/tests"],
   "exclude": ["node_modules"]
 }
