--- a/back/package.json
+++ b/back/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jest": "^29.7.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "supertest": "^7.0.0",
     "validator": "^13.12.0",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/supertest": "^6.0.2",
     "@types/validator": "^13.12.0",
     "@types/zxcvbn": "^4.4.4",
