--- a/back/package.json
+++ b/back/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "concurrently \"tsc -w\" \"nodemon dist/app.js\"",
     "dev": "tsc -w & nodemon dist/app.js",
     "test": "jest"
   },
@@ -27,6 +28,7 @@
     "@types/supertest": "^6.0.2",
     "@types/validator": "^13.12.0",
     "@types/zxcvbn": "^4.4.4",
+    "concurrently": "^8.2.2",
     "nodemon": "^3.1.4",
     "ts-jest": "^29.2.2",
     "typescript": "^5.5.3"
