--- a/back/package.json
+++ b/back/package.json
@@ -2,16 +2,18 @@
   "name": "back",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
-    "start": "concurrently \"tsc -w\" \"nodemon dist/app.js\"",
-    "dev": "tsc -w & nodemon dist/app.js",
+    "start": "node dist/app.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
+    "build": "tsc",
     "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jest": "^29.7.0",
@@ -22,6 +24,7 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
@@ -31,6 +34,7 @@
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.4",
     "ts-jest": "^29.2.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.3"
   }
 }
