--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/app.js",
   "scripts": {
-    "start": "node dist/app.js",
+    "start": "concurrently \"tsc -w\" \"nodemon dist/app.js\"",
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "build": "tsc",
     "test": "jest"
